config/manifests/item-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: item-producer
  template:
    metadata:
      labels:
        app: item-producer
    spec:
      containers:
        - name: item-producer
          image: k3d-spaced:5000/item-producer:debug
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
