config/manifests/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: k3d-spaced:5000/user-service:debug
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
