config/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-producer
spec:
  type: ClusterIP
  selector:
    app: item-producer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
